k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: caderno
  labels:
    app.kubernetes.io/name: caderno
    app.kubernetes.io/part-of: caderno
